// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`as it was — generated on the base (d9e877e6), only read since > a modal land reference: ZNR #259's front on m15mdfclandfront/w — without its block 1`] = `
{
  "cardName": "Brightclimb Pathway // Grimclimb Pathway",
  "face": "front",
  "faceName": "Brightclimb Pathway",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "land",
      "color_identity": [
        "black",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15mdfclandback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Add {B}.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Grimclimb Pathway",
      "toughness": undefined,
    },
    "card_type": "land",
    "collector": undefined,
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": null,
      "signature": "modal/2015",
      "status": "exact",
      "template": "m15mdfclandfront",
    },
    "frame_template": "m15mdfclandfront",
    "kind": "mdfc",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2015",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "259",
      "full_art": false,
      "set": "znr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "{T}: Add {W}.",
    "source_scryfall_id": "d24c3d51-795d-4c01-a34a-3280fccd2d78",
    "subtypes_text": undefined,
    "supertype": undefined,
    "title": "Brightclimb Pathway",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "land",
      "color_identity": [
        "black",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15mdfclandback",
      },
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Add {B}.",
      "subtypes": [],
      "supertype": undefined,
      "title": "Grimclimb Pathway",
      "toughness": undefined,
    },
    "cardType": "land",
    "colorIdentity": [
      "white",
    ],
    "cost": "",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15mdfclandfront",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": "{T}: Add {W}.",
    "subtypes": [],
    "supertype": null,
    "title": "Brightclimb Pathway",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/d/2/d24c3d51-795d-4c01-a34a-3280fccd2d78.jpg?1783929313",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a modal reference: STX #147's back on m15mdfcback/u 1`] = `
{
  "cardName": "Augmenter Pugilist // Echoing Equation",
  "face": "back",
  "faceName": "Echoing Equation",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "sorcery",
      "color_identity": [
        "blue",
      ],
      "cost": "{3}{U}{U}",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15mdfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Choose target creature you control. Each other creature you control becomes a copy of it until end of turn, except those creatures aren't legendary.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Echoing Equation",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": undefined,
    "color_identity": [
      "green",
    ],
    "color_pair": undefined,
    "cost": "{1}{G}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": null,
      "signature": "modal/2015",
      "status": "exact",
      "template": "m15mdfcfront",
    },
    "frame_template": "m15mdfcfront",
    "kind": "mdfc",
    "loyalty": undefined,
    "power": "3",
    "preview_art_url": null,
    "printed_collector": "2015",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "147",
      "full_art": false,
      "set": "stx",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "Trample
As long as you control eight or more lands, this creature gets +5/+5.",
    "source_scryfall_id": "d9131fc3-018a-4975-8795-47be3956160d",
    "subtypes_text": "Troll, Druid",
    "supertype": undefined,
    "title": "Augmenter Pugilist",
    "toughness": "3",
  },
  "preview": {
    "artPosition": {},
    "artUrl": null,
    "artistCredit": null,
    "backCard": null,
    "backFace": null,
    "cardType": "sorcery",
    "colorIdentity": [
      "blue",
    ],
    "cost": "{3}{U}{U}",
    "defense": null,
    "dfc": {
      "icon": null,
      "layout": "modal",
      "otherFace": {
        "line": "{1}{G}{G}",
        "power": "3",
        "printsPt": true,
        "stripKey": "g",
        "toughness": "3",
        "typeWord": "Druid",
      },
      "role": "back",
    },
    "faceContent": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15mdfcback",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": "Choose target creature you control. Each other creature you control becomes a copy of it until end of turn, except those creatures aren't legendary.",
    "subtypes": [],
    "supertype": null,
    "title": "Echoing Equation",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/back/d/9/d9131fc3-018a-4975-8795-47be3956160d.jpg?1783927337",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a modal reference: STX #147's front on m15mdfcfront/g — without its block 1`] = `
{
  "cardName": "Augmenter Pugilist // Echoing Equation",
  "face": "front",
  "faceName": "Augmenter Pugilist",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "sorcery",
      "color_identity": [
        "blue",
      ],
      "cost": "{3}{U}{U}",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15mdfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Choose target creature you control. Each other creature you control becomes a copy of it until end of turn, except those creatures aren't legendary.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Echoing Equation",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": undefined,
    "color_identity": [
      "green",
    ],
    "color_pair": undefined,
    "cost": "{1}{G}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": null,
      "signature": "modal/2015",
      "status": "exact",
      "template": "m15mdfcfront",
    },
    "frame_template": "m15mdfcfront",
    "kind": "mdfc",
    "loyalty": undefined,
    "power": "3",
    "preview_art_url": null,
    "printed_collector": "2015",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "147",
      "full_art": false,
      "set": "stx",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "Trample
As long as you control eight or more lands, this creature gets +5/+5.",
    "source_scryfall_id": "d9131fc3-018a-4975-8795-47be3956160d",
    "subtypes_text": "Troll, Druid",
    "supertype": undefined,
    "title": "Augmenter Pugilist",
    "toughness": "3",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "sorcery",
      "color_identity": [
        "blue",
      ],
      "cost": "{3}{U}{U}",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15mdfcback",
      },
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Choose target creature you control. Each other creature you control becomes a copy of it until end of turn, except those creatures aren't legendary.",
      "subtypes": [],
      "supertype": undefined,
      "title": "Echoing Equation",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "green",
    ],
    "cost": "{1}{G}{G}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15mdfcfront",
    },
    "loyalty": null,
    "power": "3",
    "rarity": null,
    "rulesText": "Trample
As long as you control eight or more lands, this creature gets +5/+5.",
    "subtypes": [
      "Troll",
      "Druid",
    ],
    "supertype": null,
    "title": "Augmenter Pugilist",
    "toughness": "3",
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/d/9/d9131fc3-018a-4975-8795-47be3956160d.jpg?1783927337",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a non-DFC template: MID #169 (a sun / moon printing) on m15, front 1`] = `
{
  "cardName": "Bird Admirer // Wing Shredder",
  "face": "front",
  "faceName": "Bird Admirer",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "green",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcbackleft",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Reach
Nightbound (If a player casts at least two spells during their own turn, it becomes day next turn.)",
      "subtypes_text": "Werewolf",
      "supertype": undefined,
      "title": "Wing Shredder",
      "toughness": "5",
    },
    "card_type": "creature",
    "collector": undefined,
    "color_identity": [
      "green",
    ],
    "color_pair": undefined,
    "cost": "{2}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2015",
    "printed_crown": undefined,
    "printed_dfc_icon": "sunmoon",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "169",
      "full_art": false,
      "set": "mid",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "Reach
Daybound (If a player casts no spells during their own turn, it becomes night next turn.)",
    "source_scryfall_id": "71ccc444-54c8-4f7c-a425-82bc3eea1eb0",
    "subtypes_text": "Human, Archer, Werewolf",
    "supertype": undefined,
    "title": "Bird Admirer",
    "toughness": "4",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Reach
Nightbound (If a player casts at least two spells during their own turn, it becomes day next turn.)",
      "subtypes": [
        "Werewolf",
      ],
      "supertype": undefined,
      "title": "Wing Shredder",
      "toughness": "5",
    },
    "cardType": "creature",
    "colorIdentity": [
      "green",
    ],
    "cost": "{2}{G}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "1",
    "rarity": null,
    "rulesText": "Reach
Daybound (If a player casts no spells during their own turn, it becomes night next turn.)",
    "subtypes": [
      "Human",
      "Archer",
      "Werewolf",
    ],
    "supertype": null,
    "title": "Bird Admirer",
    "toughness": "4",
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/7/1/71ccc444-54c8-4f7c-a425-82bc3eea1eb0.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a non-DFC template: MID #169 on m15, its legacy back 1`] = `
{
  "cardName": "Bird Admirer // Wing Shredder",
  "face": "back",
  "faceName": "Wing Shredder",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "green",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcbackleft",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Reach
Nightbound (If a player casts at least two spells during their own turn, it becomes day next turn.)",
      "subtypes_text": "Werewolf",
      "supertype": undefined,
      "title": "Wing Shredder",
      "toughness": "5",
    },
    "card_type": "creature",
    "collector": undefined,
    "color_identity": [
      "green",
    ],
    "color_pair": undefined,
    "cost": "{2}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2015",
    "printed_crown": undefined,
    "printed_dfc_icon": "sunmoon",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "169",
      "full_art": false,
      "set": "mid",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "Reach
Daybound (If a player casts no spells during their own turn, it becomes night next turn.)",
    "source_scryfall_id": "71ccc444-54c8-4f7c-a425-82bc3eea1eb0",
    "subtypes_text": "Human, Archer, Werewolf",
    "supertype": undefined,
    "title": "Bird Admirer",
    "toughness": "4",
  },
  "preview": {
    "artPosition": {},
    "artUrl": null,
    "artistCredit": null,
    "backCard": null,
    "backFace": null,
    "cardType": "creature",
    "collectorNumber": null,
    "colorIdentity": [
      "green",
    ],
    "cost": "",
    "defense": null,
    "dfc": null,
    "faceContent": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "lang": null,
    "loyalty": null,
    "power": "3",
    "rarity": null,
    "rulesText": "Reach
Nightbound (If a player casts at least two spells during their own turn, it becomes day next turn.)",
    "setCode": null,
    "subtypes": [
      "Werewolf",
    ],
    "supertype": null,
    "title": "Wing Shredder",
    "toughness": "5",
    "watermark": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/back/7/1/71ccc444-54c8-4f7c-a425-82bc3eea1eb0.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a non-DFC template: NEO #227 (a fan printing) on saga/m 1`] = `
{
  "cardName": "The Kami War // O-Kagachi Made Manifest",
  "face": "front",
  "faceName": "The Kami War",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": undefined,
      "subtypes_text": "Dragon, Spirit",
      "supertype": "Enchantment",
      "title": "O-Kagachi Made Manifest",
      "toughness": undefined,
    },
    "card_type": "enchantment",
    "collector": {
      "collector_number": "227",
      "lang": "en",
      "set_code": "NEO",
    },
    "color_identity": [
      "multicolor",
    ],
    "color_pair": undefined,
    "cost": "{1}{W}{U}{B}{R}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.5",
      "exactLabel": "Saga frame",
      "gaps": [
        "dfc",
      ],
      "reason": "PipGlyph doesn't draw the double-faced marks on this frame yet",
      "signature": "layout/2015+dfc",
      "status": "nearest",
      "template": "saga",
    },
    "frame_template": undefined,
    "kind": "saga",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "227",
      "full_art": false,
      "set": "neo",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": undefined,
    "source_scryfall_id": "36052532-5028-43a8-9fc4-56221ec867fd",
    "subtypes_text": "Saga",
    "supertype": undefined,
    "title": "The Kami War",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": undefined,
      "subtypes": [
        "Dragon",
        "Spirit",
      ],
      "supertype": "Enchantment",
      "title": "O-Kagachi Made Manifest",
      "toughness": undefined,
    },
    "cardType": "enchantment",
    "colorIdentity": [
      "multicolor",
    ],
    "cost": "{1}{W}{U}{B}{R}{G}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "saga",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": null,
    "subtypes": [
      "Saga",
    ],
    "supertype": null,
    "title": "The Kami War",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/3/6/36052532-5028-43a8-9fc4-56221ec867fd.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > a non-DFC template: Serra Angel on m15/w 1`] = `
{
  "cardName": "Serra Angel",
  "face": "front",
  "faceName": null,
  "hasBackScan": false,
  "patch": {
    "artist_credit": undefined,
    "back_face": undefined,
    "card_type": "creature",
    "collector": {
      "collector_number": "33",
      "lang": "en",
      "set_code": "DOM",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": undefined,
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) frame",
      "reason": null,
      "signature": "era/2015",
      "status": "exact",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "33",
      "full_art": false,
      "set": "dom",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": undefined,
    "source_scryfall_id": "b56b9131-4f7e-4912-ba47-63ed82f21d1b",
    "subtypes_text": "Angel",
    "supertype": undefined,
    "title": "Serra Angel",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": null,
    "cardType": "creature",
    "colorIdentity": [
      "white",
    ],
    "cost": null,
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": null,
    "subtypes": [
      "Angel",
    ],
    "supertype": null,
    "title": "Serra Angel",
    "toughness": null,
  },
  "scanUrl": null,
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows land back: FIN #31 on m15dfclandback/c 1`] = `
{
  "cardName": "Sidequest: Catch a Fish // Cooking Campsite",
  "face": "back",
  "faceName": "Cooking Campsite",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "land",
      "color_identity": [
        "colorless",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfclandback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Add {W}.
{3}, {T}, Sacrifice an artifact: Put a +1/+1 counter on each creature you control. Activate only as a sorcery.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Cooking Campsite",
      "toughness": undefined,
    },
    "card_type": "enchantment",
    "collector": {
      "collector_number": "31",
      "lang": "en",
      "set_code": "FIN",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{2}{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "4.7",
      "exactLabel": "M15 (2015) transform frame",
      "gaps": [
        "nyx",
      ],
      "reason": "PipGlyph doesn't draw the Nyx starfield on this frame yet",
      "signature": "transform/2015+nyx",
      "status": "nearest",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "31",
      "full_art": false,
      "set": "fin",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "At the beginning of your upkeep, look at the top card of your library. If it's an artifact or creature card, you may reveal it and put it into your hand. If you put a card into your hand this way, create a Food token and transform this enchantment.",
    "source_scryfall_id": "bdb5452e-d97f-409b-91d0-2664f39b09b8",
    "subtypes_text": undefined,
    "supertype": undefined,
    "title": "Sidequest: Catch a Fish",
    "toughness": undefined,
  },
  "preview": {
    "artPosition": {},
    "artUrl": null,
    "artistCredit": null,
    "backCard": null,
    "backFace": null,
    "cardType": "land",
    "colorIdentity": [
      "white",
    ],
    "cost": "",
    "defense": null,
    "dfc": {
      "icon": "arrows",
      "layout": "transform",
      "otherFace": {
        "line": "{2}{W}",
        "power": null,
        "printsPt": false,
        "stripKey": "w",
        "toughness": null,
        "typeWord": "Enchantment",
      },
      "role": "back",
    },
    "faceContent": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfclandback",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": "{T}: Add {W}.
{3}, {T}, Sacrifice an artifact: Put a +1/+1 counter on each creature you control. Activate only as a sorcery.",
    "subtypes": [],
    "supertype": null,
    "title": "Cooking Campsite",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/back/b/d/bdb5452e-d97f-409b-91d0-2664f39b09b8.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows land front: INR #287 on m15dfclandfront/c — without its block 1`] = `
{
  "cardName": "Westvale Abbey // Ormendahl, Profane Prince",
  "face": "front",
  "faceName": "Westvale Abbey",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "black",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "9",
      "rules_text": "Flying, lifelink, indestructible, haste",
      "subtypes_text": "Demon",
      "supertype": "Legendary",
      "title": "Ormendahl, Profane Prince",
      "toughness": "7",
    },
    "card_type": "land",
    "collector": {
      "collector_number": "287",
      "lang": "en",
      "set_code": "INR",
    },
    "color_identity": [
      "colorless",
    ],
    "color_pair": undefined,
    "cost": "",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfclandfront",
    },
    "frame_template": "m15dfclandfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": true,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "287",
      "full_art": false,
      "set": "inr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "{T}: Add {C}.
{5}, {T}, Pay 1 life: Create a 1/1 white and black Human Cleric creature token.
{5}, {T}, Sacrifice five creatures: Transform this land, then untap it.",
    "source_scryfall_id": "5fbc6091-a161-45b0-9932-543b569caaee",
    "subtypes_text": undefined,
    "supertype": undefined,
    "title": "Westvale Abbey",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "9",
      "rules_text": "Flying, lifelink, indestructible, haste",
      "subtypes": [
        "Demon",
      ],
      "supertype": "Legendary",
      "title": "Ormendahl, Profane Prince",
      "toughness": "7",
    },
    "cardType": "land",
    "colorIdentity": [
      "colorless",
    ],
    "cost": "",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfclandfront",
    },
    "loyalty": null,
    "power": null,
    "rarity": null,
    "rulesText": "{T}: Add {C}.
{5}, {T}, Pay 1 life: Create a 1/1 white and black Human Cleric creature token.
{5}, {T}, Sacrifice five creatures: Transform this land, then untap it.",
    "subtypes": [],
    "supertype": null,
    "title": "Westvale Abbey",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/5/f/5fbc6091-a161-45b0-9932-543b569caaee.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows reference: INR #60's back on m15dfcback/u 1`] = `
{
  "cardName": "Delver of Secrets // Insectile Aberration",
  "face": "back",
  "faceName": "Insectile Aberration",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "blue",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Flying",
      "subtypes_text": "Human, Insect",
      "supertype": undefined,
      "title": "Insectile Aberration",
      "toughness": "2",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "60",
      "lang": "en",
      "set_code": "INR",
    },
    "color_identity": [
      "blue",
    ],
    "color_pair": undefined,
    "cost": "{U}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "60",
      "full_art": false,
      "set": "inr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "At the beginning of your upkeep, look at the top card of your library. You may reveal that card. If an instant or sorcery card is revealed this way, transform this creature.",
    "source_scryfall_id": "6904ea20-e504-47da-95a0-08739fdde260",
    "subtypes_text": "Human, Wizard",
    "supertype": undefined,
    "title": "Delver of Secrets",
    "toughness": "1",
  },
  "preview": {
    "artPosition": {},
    "artUrl": null,
    "artistCredit": null,
    "backCard": null,
    "backFace": null,
    "cardType": "creature",
    "colorIdentity": [
      "blue",
    ],
    "cost": "",
    "defense": null,
    "dfc": {
      "icon": "arrows",
      "layout": "transform",
      "otherFace": {
        "line": "{U}",
        "power": "1",
        "printsPt": true,
        "stripKey": "u",
        "toughness": "1",
        "typeWord": "Wizard",
      },
      "role": "back",
    },
    "faceContent": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfcback",
    },
    "loyalty": null,
    "power": "3",
    "rarity": null,
    "rulesText": "Flying",
    "subtypes": [
      "Human",
      "Insect",
    ],
    "supertype": null,
    "title": "Insectile Aberration",
    "toughness": "2",
  },
  "scanUrl": "https://cards.scryfall.io/normal/back/6/9/6904ea20-e504-47da-95a0-08739fdde260.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows reference: INR #60's front on m15dfcfront/u — without its block 1`] = `
{
  "cardName": "Delver of Secrets // Insectile Aberration",
  "face": "front",
  "faceName": "Delver of Secrets",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "blue",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Flying",
      "subtypes_text": "Human, Insect",
      "supertype": undefined,
      "title": "Insectile Aberration",
      "toughness": "2",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "60",
      "lang": "en",
      "set_code": "INR",
    },
    "color_identity": [
      "blue",
    ],
    "color_pair": undefined,
    "cost": "{U}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "60",
      "full_art": false,
      "set": "inr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "At the beginning of your upkeep, look at the top card of your library. You may reveal that card. If an instant or sorcery card is revealed this way, transform this creature.",
    "source_scryfall_id": "6904ea20-e504-47da-95a0-08739fdde260",
    "subtypes_text": "Human, Wizard",
    "supertype": undefined,
    "title": "Delver of Secrets",
    "toughness": "1",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "3",
      "rules_text": "Flying",
      "subtypes": [
        "Human",
        "Insect",
      ],
      "supertype": undefined,
      "title": "Insectile Aberration",
      "toughness": "2",
    },
    "cardType": "creature",
    "colorIdentity": [
      "blue",
    ],
    "cost": "{U}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfcfront",
    },
    "loyalty": null,
    "power": "1",
    "rarity": null,
    "rulesText": "At the beginning of your upkeep, look at the top card of your library. You may reveal that card. If an instant or sorcery card is revealed this way, transform this creature.",
    "subtypes": [
      "Human",
      "Wizard",
    ],
    "supertype": null,
    "title": "Delver of Secrets",
    "toughness": "1",
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/6/9/6904ea20-e504-47da-95a0-08739fdde260.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows reference: MOM #43's back on m15dfcback/m 1`] = `
{
  "cardName": "Tarkir Duneshaper // Burnished Dunestomper",
  "face": "back",
  "faceName": "Burnished Dunestomper",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "multicolor",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "4",
      "rules_text": "Trample",
      "subtypes_text": "Phyrexian, Dog, Warrior",
      "supertype": undefined,
      "title": "Burnished Dunestomper",
      "toughness": "3",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "43",
      "lang": "en",
      "set_code": "MOM",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "43",
      "full_art": false,
      "set": "mom",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "{4}{G/P}: Transform this creature. Activate only as a sorcery. ({G/P} can be paid with either {G} or 2 life.)",
    "source_scryfall_id": "fdc37acc-05ba-4457-8a03-d635497bfb1b",
    "subtypes_text": "Dog, Warrior",
    "supertype": undefined,
    "title": "Tarkir Duneshaper",
    "toughness": "2",
  },
  "preview": {
    "artPosition": {},
    "artUrl": null,
    "artistCredit": null,
    "backCard": null,
    "backFace": null,
    "cardType": "creature",
    "colorIdentity": [
      "green",
      "white",
    ],
    "cost": "",
    "defense": null,
    "dfc": {
      "icon": "arrows",
      "layout": "transform",
      "otherFace": {
        "line": "{W}",
        "power": "1",
        "printsPt": true,
        "stripKey": "w",
        "toughness": "2",
        "typeWord": "Warrior",
      },
      "role": "back",
    },
    "faceContent": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfcback",
    },
    "loyalty": null,
    "power": "4",
    "rarity": null,
    "rulesText": "Trample",
    "subtypes": [
      "Phyrexian",
      "Dog",
      "Warrior",
    ],
    "supertype": null,
    "title": "Burnished Dunestomper",
    "toughness": "3",
  },
  "scanUrl": "https://cards.scryfall.io/normal/back/f/d/fdc37acc-05ba-4457-8a03-d635497bfb1b.jpg",
  "scryfallUri": null,
}
`;

exports[`as it was — generated on the base (d9e877e6), only read since > an arrows reference: MOM #43's front on m15dfcfront/w — without its block 1`] = `
{
  "cardName": "Tarkir Duneshaper // Burnished Dunestomper",
  "face": "front",
  "faceName": "Tarkir Duneshaper",
  "hasBackScan": true,
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "creature",
      "color_identity": [
        "multicolor",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcback",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "4",
      "rules_text": "Trample",
      "subtypes_text": "Phyrexian, Dog, Warrior",
      "supertype": undefined,
      "title": "Burnished Dunestomper",
      "toughness": "3",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "43",
      "lang": "en",
      "set_code": "MOM",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "1",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_dfc_icon": "arrows",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": "black",
      "collector_number": "43",
      "full_art": false,
      "set": "mom",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": undefined,
    "rules_text": "{4}{G/P}: Transform this creature. Activate only as a sorcery. ({G/P} can be paid with either {G} or 2 life.)",
    "source_scryfall_id": "fdc37acc-05ba-4457-8a03-d635497bfb1b",
    "subtypes_text": "Dog, Warrior",
    "supertype": undefined,
    "title": "Tarkir Duneshaper",
    "toughness": "2",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "4",
      "rules_text": "Trample",
      "subtypes": [
        "Phyrexian",
        "Dog",
        "Warrior",
      ],
      "supertype": undefined,
      "title": "Burnished Dunestomper",
      "toughness": "3",
    },
    "cardType": "creature",
    "colorIdentity": [
      "white",
    ],
    "cost": "{W}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15dfcfront",
    },
    "loyalty": null,
    "power": "1",
    "rarity": null,
    "rulesText": "{4}{G/P}: Transform this creature. Activate only as a sorcery. ({G/P} can be paid with either {G} or 2 life.)",
    "subtypes": [
      "Dog",
      "Warrior",
    ],
    "supertype": null,
    "title": "Tarkir Duneshaper",
    "toughness": "2",
  },
  "scanUrl": "https://cards.scryfall.io/normal/front/f/d/fdc37acc-05ba-4457-8a03-d635497bfb1b.jpg",
  "scryfallUri": null,
}
`;
